<resources>
    <string name="app_name">GroceryList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tools_login_form_title">Login Form</string>
    <string name="login_name_hint">User name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_text_view_login_fragment">New User? Register Now</string>
    <string name="register_form_title">Register Form</string>
    <string name="register_name_hint">Name</string>
    <string name="register_user_name_hint">User name</string>
    <string name="register_password_hint">Password</string>
    <string name="registration_button_text">Register</string>
    <string name="welcome_button_logout">Logout</string>

    <string name="pref_file">pl.sjmprofil.preference_file</string>
    <string name="pref_login_status">pl.sjmprofil.preference_login_status</string>
    <string name="pref_user_name">pl.sjmprofil.user_name</string>
    <string name="api_endpoint_address">http://sjmprofil.pl/list/</string>
    <string name="add_item_dialog_fragment_text_view_add">Dodaj</string>
    <string name="add_item_name_dialog_fragment">Produkt</string>
    <string name="add_item_description_dialog_fragment">Opis</string>
    <string name="add_button_dialog_fragment_cancel_button_text">Dodaj</string>
    <string name="cancel_button_dialog_fragment_cancel_button_text">Wstecz</string>

    <string name="network_error">Network Error</string>
    <string name="check_internet_connection">Please check for your internet connection. \n\nPress OK to open settings
    </string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="connection_condition">You must be connected to internet</string>
    <string name="menu_settings">Settings</string>
    <string name="add_local_item_dialog_fragment_text_view_add">Dodaj Moje</string>
</resources>
