<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LocalFragment">

    <TextView
            android:id="@+id/text_view_header_registration_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/register_form_title"
            android:gravity="center_horizontal"
            android:textSize="@dimen/header_text_size"
            android:layout_margin="@dimen/margin_size_normal"
    />

    <EditText
            android:id="@+id/edit_text_name_registration_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_header_registration_fragment"
            android:hint="@string/register_name_hint"
            android:layout_margin="@dimen/margin_size_normal"/>

    <EditText
            android:id="@+id/edit_text_user_name_registration_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_name_registration_fragment"
            android:hint="@string/register_user_name_hint"
            android:layout_margin="@dimen/margin_size_normal"/>

    <EditText
            android:id="@+id/edit_text_password_registration_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_user_name_registration_fragment"
            android:hint="@string/register_password_hint"
            android:layout_margin="@dimen/margin_size_normal"/>

    <Button
            android:id="@+id/button_register_registration_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_password_registration_fragment"
            android:layout_centerHorizontal="true"
            android:text="@string/registration_button_text"
    />

</RelativeLayout>