<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

    <TextView
            android:id="@+id/text_view_header_login_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/tools_login_form_title"
            android:gravity="center"
            android:textSize="@dimen/header_text_size"
            android:layout_margin="@dimen/margin_size_normal"
    />

    <EditText
            android:id="@+id/edit_text_login_user_name_login_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_header_login_fragment"
            android:hint="@string/login_name_hint"
            android:layout_margin="@dimen/margin_size_normal"/>

    <EditText
            android:id="@+id/edit_text_login_password_login_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_login_user_name_login_fragment"
            android:hint="@string/login_password_hint"
            android:layout_margin="@dimen/margin_size_normal"/>

    <Button
            android:id="@+id/button_login_login_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_login_password_login_fragment"
            android:text="@string/login_button_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_size_normal"/>

    <TextView
            android:id="@+id/text_view_register_login_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_login_login_fragment"
            android:layout_margin="@dimen/margin_size_normal"
            android:text="@string/register_text_view_login_fragment"
            android:gravity="center_horizontal"/>

</RelativeLayout>