<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCreamLightTransparent">

    <RelativeLayout
            android:id="@+id/dialogLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:context=".utilities.DialogFragmentAddBio">

        <ImageView
                android:id="@+id/add_bio_dialog_fragment_image_view"
                android:layout_width="@dimen/add_item_dialog_fragment_image_size"
                android:layout_height="@dimen/add_item_dialog_fragment_image_size"
                android:src="@drawable/ic_edit_black_24dp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_item_dialog_fragment_text_view_add"
                android:textSize="@dimen/add_item_header_text_size"
                android:layout_toEndOf="@+id/add_bio_dialog_fragment_image_view"
                android:layout_alignBottom="@+id/add_bio_dialog_fragment_image_view"
        />

        <EditText
                android:id="@+id/tv_add_header_dialog_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/add_item_header_text_size"
                android:hint="@string/add_item_name_dialog_fragment"
                android:layout_margin="@dimen/margin_size_normal"
                android:imeOptions="actionNext"
                android:singleLine="false"
                android:layout_below="@+id/add_bio_dialog_fragment_image_view"
        />

        <EditText
                android:id="@+id/tv_add_description_dialog_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_item_description_dialog_fragment"
                android:imeOptions="actionDone"
                android:textSize="@dimen/add_item_header_text_size"
                android:layout_margin="@dimen/margin_size_normal"
                android:singleLine="false"
                android:layout_below="@+id/tv_add_header_dialog_fragment"
        />

        <Button
                android:id="@+id/button_cancel_bio_dialog_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_add_description_dialog_fragment"
                android:text="@string/cancel_button_dialog_fragment_cancel_button_text"
                android:layout_margin="@dimen/margin_card_view"
                android:layout_toStartOf="@+id/button_add_bio_dialog_fragment"
                android:background="@drawable/add_button_primary_fragment_ripple_effect"
        />

        <Button
                android:id="@+id/button_add_bio_dialog_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_add_description_dialog_fragment"
                android:text="@string/add_button_dialog_fragment_cancel_button_text"
                android:layout_margin="@dimen/margin_card_view"
                android:layout_alignParentEnd="true"
                android:background="@drawable/add_button_primary_fragment_ripple_effect"
        />
    </RelativeLayout>
</ScrollView>